--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
+// .gitnignore
+# next.js build output
 .next
 
-# production
-/build
+# dotenv environment variables file (build for Zeit Now)
+.env
+.env.build
 
-# misc
-.DS_Store
-*.pem
+# Dependency directories
+node_modules/
 
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# vercel
-.vercel
